# hirakanadic

./: .gitignore  Makefile  README.md  pyproject.toml
example/: input.txt
hirakanadic/: cli.py
tests/: input.txt  test_hirakanadic.py
