[tool.poetry]
name = "hirakanadic"
version = "0.0.3"
description = ""
authors = ["po3rin"]
repository = "http://github.com/po3rin/hirakanadic"
homepage = "http://github.com/po3rin/hirakanadic"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
hirakanadic = "hirakanadic.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
sudachipy = "^0.5.2"
sudachidict_full = "^20210608"
SudachiDict-core = "^20210608"
jaconv = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
