[tool.poetry]
name = "hirakanadic"
version = "0.0.4"
description = ""
authors = ["po3rin"]
repository = "http://github.com/po3rin/hirakanadic"
homepage = "http://github.com/po3rin/hirakanadic"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.scripts]
hirakanadic = "hirakanadic.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
sudachipy = "^0.6.7"
sudachidict-core = "^20230110"
sudachidict-full = "^20230110"
jaconv = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
